# football-club-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_ANALYTICS_GUIDE.md  COMPLETE_PLATFORM_SETUP.md  CONFIGURAZIONE_STABILE.md  Dockerfile  IMPLEMENTATION_REPORT_60-100.md  MANUAL_SETUP_COMMANDS.md  Makefile  PLATFORM_READY.md  PR_BODY.md  QUICK_START.md  QUICK_START_COMPLETE.md  README.md  README_DEV_NOTES.md  SEEDING_GUIDE.md  SEEDS_PR_SUMMARY.md  TEAM1_DECISIONS.md  TEAM2_DECISIONS.md  TEAM3_DECISIONS.md  alembic.ini  diagnostics_fcp.py  docker-compose.prod.yml  docker-compose.yml  init-db.sql  populate_data.py  pyproject.toml  quick_setup.py  setup_and_test.bat  setup_and_test.sh  setup_complete_platform.bat  setup_complete_platform.sh  tatus -sb  test_data.py
.claude/: settings.local.json
.github/workflows/: ci.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_enable_rls_multi_tenant.py
app/db/: database.py
app/models/: enums.py  models.py
app/routers/: import_export.py  ml_predictions.py  players.py  sessions.py
app/services/: calculations.py
app_legacy/: config.py  main.py
app_legacy/routers/: analytics.py
app_legacy/schemas/: schemas.py
assets/templates/: session_import_template.csv
backend/: .env.example  API_USAGE.md  Dockerfile  PROGRESS_FEATURE_SUMMARY.md  SEEDING_GUIDE.md  alembic.ini  create_tables.py  create_wellness_view.py  insert_wellness.py  pytest.ini  quick_seed.sql  requirements.txt  seed_data.py  seed_demo_players.py  seed_final.py  seed_simple_demo.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  db_sync.py  dependencies.py  main.py  notifications.py  observability.py  scheduler.py  security.py
backend/ml/: mlflow_stub.py
backend/scripts/: complete_seed_advanced.py  seed_demo_data.py  seed_giovani.py  seed_ml_analytics.py  seed_player_stats.py  test_analytics_apis.py
backend/seeds/: SEEDING_GUIDE.md  __init__.py  config.py  runner.py  seed_all.py  seed_wellness_sessions.py  utils.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_cors.py  test_health.py  test_progress_endpoints.py  test_readiness_api.py  test_seeds_players.py  test_sessions_router.py  test_smoke.py  test_training.py  test_wellness_summary.py  test_wellness_training_seed.py
dbt/: dbt_project.yml  profiles-example.yml
dbt/models/: sources.yml
docs/: ARCH_TENANCY_AND_APIS.md  DEMO_WALKTHROUGH.md  README.md  report_cover_example.html
docs/api/: ADVANCED_TRACKING_IMPLEMENTATION.md  API.md  PERFORMANCE_MODULES_SUMMARY.md
docs/architecture/: ARCHITECTURE.md  NAMING_CONVENTION.md  PROJECT_SUMMARY.md
docs/data/: slo.md  unified-schema.yaml  validation.md
docs/development/: IMPLEMENTATION_STATUS.md  IMPLEMENTAZIONE_COMPLETA.md  MIGRATION_GUIDE.md
docs/integrations/: roadmap.md
docs/medical/: coding-RTP.md
docs/ml/: blueprints.md
docs/operations/: DEPLOYMENT_REPORT.md  OPERATIONS.md
docs/privacy/: DPIA-draft.md  dpa-checklist.md  gdpr-pack.md  legal-basis.md  parental-consents.md  pseudonymization-strategy.md  retention-policy.md
docs/product/: DECISION-LOG.md  OKR.md
docs/release/: plan.md
docs/reports/: CHANGELOG_CLAUDE.md  CLEANUP_REPORT.md  DEEP_CLEANUP_REPORT.md  FOOTBALL_CLUB_PLATFORM_DIAGNOSTIC_REPORT.md  REPOSITORY_AUDIT_2025-10-28.md
docs/science/: psychometrics.md  thresholds.md
docs/security/: threat-model.md
docs/ux/: flows.md
docs/video/: goldset.md  tagging-guidelines.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Navbar.tsx
frontend/lib/: api.ts  (+3 more)
great_expectations/: great_expectations.yml
infra/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
ml/: __init__.py  features.py  predict.py
scripts/: backup_db.sh  collect_diagnostics.sh  complete_data_seed.py  comprehensive_seed.py  create_tables_direct.py  init_alembic_migration.sh  preflight-ports.ps1  preflight-ports.sh  restore_db.sh  run_ge_checkpoint.py  seed.py  seed_advanced_tracking.py  seed_data.py  seed_demo.py  seed_five_players.py  seed_five_players_correct.py  seed_giovani.py  seed_simple.py  seed_two_players.py  seed_wellness_data.py  test_ml_algorithms.py  verify_complete_data.py  verify_demo_10x10.ps1  verify_demo_10x10.sh  verify_metrics.sh
templates/: index.html
tests/: conftest.py  test_api.py  test_calculations.py
(+228 files in other folders)
